# readsql

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  regexes.txt  setup.py  speed.txt  sql_example.sql  sql_example_in_python.py
.github/workflows/: ci.yml  publish-pypi.yml  tests.yml
readsql/: __main__.py  app.py  parse_args.py  regexes.txt
tests/: check.py  speed.txt  sql_example.sql  sql_example_correct.sql  sql_in_python_example.py  sql_in_python_example_correct.py  sql_in_python_multifile1_example.py  sql_in_python_multifile1_example_correct.py  sql_in_python_multifile2_example.py  sql_in_python_variable_example.py  sql_in_python_variable_example_correct.py  sql_in_python_variables_example.py  sql_in_python_variables_example_correct.py  test.py  test_files.py  test_python_advanced.py  test_strings.py  timing.py
