[tool.poetry]
name = "readsql"
version = "0.1.0"
description = "Convert SQL to most human readable format"
authors = ["Azis <azuolas.krusna@yahoo.com>"]
maintainers = ["Azis <azuolas.krusna@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AzisK/readsql/"
keywords = ["SQL",
            "Lint",
            "Python"]

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
zimports = "^0.2.0"

[tool.poetry.scripts]
readsql = "readsql.__main__:command_line"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

