[project]
name = "readsql"
version = "1.0.0"
description = "Convert SQL to most human readable format"
authors = [{ name = "Azis", email = "azuolas.krusna@yahoo.com" }]
maintainers = [{ name = "Azis", email = "azuolas.krusna@yahoo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["SQL", "Lint", "Python"]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
readsql = "readsql.__main__:main"

[project.urls]
Repository = "https://github.com/AzisK/readsql/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["readsql"]
